fix: fix textarea text-align (#91)

--- a/src/components/ui/atoms/TextArea/index.module.scss
+++ b/src/components/ui/atoms/TextArea/index.module.scss
@@ -1,4 +1,5 @@
 textarea{
+    text-align:center;
   &:focus {
     outline: none;
   }
